fix for table alignment

--- a/WebApp/wwwroot/css/materialize.css
+++ b/WebApp/wwwroot/css/materialize.css
@@ -2338,6 +2338,8 @@ table {
   table.striped th {
     color: #9494a2;
     font-weight: 600; }
+    table.striped th:first-child {
+      text-align: left; }
   table.striped tr {
     border-bottom: none; }
   table.striped > thead {
@@ -2347,6 +2349,8 @@ table {
     background-color: rgba(242, 242, 242, 0.5); }
   table.striped > tbody > tr > td {
     border-radius: 0; }
+    table.striped > tbody > tr > td:first-child {
+      padding-left: 18px; }
     table.striped > tbody > tr > td:not(:first-child) {
       text-align: center; }
   table.highlight > tbody > tr {
@@ -7699,6 +7703,7 @@ table.dataTable tfoot th {
 table.dataTable thead th,
 table.dataTable thead td {
   padding: 10px 18px;
+  text-align: center;
   /*border-bottom: 1px solid #111;*/ }
 
 table.dataTable thead th:active,
