--- a/WebApp/wwwroot/css/scss/components/_table.scss
+++ b/WebApp/wwwroot/css/scss/components/_table.scss
@@ -35,6 +35,7 @@ table.dataTable tfoot th {
 table.dataTable thead th,
 table.dataTable thead td {
     padding: 10px 18px;
+    text-align: center;
     /*border-bottom: 1px solid #111;*/
 }
 
